--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ authors = [
 requires-python = ">=3.13"
 license = { text = "MIT" }
 dependencies = [
-    "python-fasthtml","fastsql"
+    "python-fasthtml","fastsql", "transitions"
 ]
 
 
