--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,6 +11,26 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
+        with:
+          clean: false
 
-      - name: Run docker-compose
-        run: docker compose up -d --build
+      - name: Set Up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.13'
+      - name: Set Up env
+        run: |
+          pip install -r requirements.txt  
+          mkdir -p ./data
+      
+      - name: Deploy
+        run: |
+          echo "Using Python at: $(which python)"
+          PORT=8000
+          PID=$(lsof -t -i:$PORT) || echo "No process found on port $PORT"
+              if [ -n "$PID" ]; then
+                echo "Killing process $PID using port $PORT"
+                kill -9 $PID || echo "Failed to kill process $PID"
+              fi
+          RUNNER_TRACKING_ID="" && nohup python run.py > app.log 2>&1 &
+          echo "App started"
