--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   deploy:
+    if: ${{ ! contains(github.event.head_commit.message, '[no-deploy]') }}
     runs-on: self-hosted
     steps:
       - name: Checkout Code
