--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,13 @@ build-backend = "setuptools.build_meta"
 name = "meme-games"
 version = "0.1.0"
 description = "A collection of meme games"
-authors = [
-    { name="Slava Chaunin", email="slava.chaunin@gmail.com" }
-]
+authors = [{ name = "Slava Chaunin", email = "slava.chaunin@gmail.com" }]
 requires-python = ">=3.12"
 license = { text = "MIT" }
-dependencies = [
-    "python-fasthtml"
-]
+dependencies = ["python-fasthtml"]
+
+[project.optional-dependencies]
+"dev" = ["nbdev"]
 
 
 [tool.setuptools]
