--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
 services:
   app:
-    build: .
+    image: ghcr.io/ssslakter/meme-games:main
+    pull_policy: always
     ports:
       - "8000:8000"
     volumes:
       - ./data:/app/data
-      - ./logs:/app/logs
+      - ./user-content:/app/user-content
     restart: always
