refactoring: - fixed hard coded routes - fixed import - implemented DI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,3 +33,6 @@ default = { solve-group = "default" }
 dev = { features = ["dev"], solve-group = "default" }
 
 [tool.pixi.tasks]
+
+[dependency-groups]
+dev = ["ipykernel>=6.29.5,<7"]
