--- a/settings.ini
+++ b/settings.ini
@@ -12,4 +12,4 @@ lib_path = meme_games
 nbs_path = notebooks
 recursive = True
 tst_flags = notest
-put_version_in_init = True
+put_version_in_init = False
