--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,9 +33,7 @@ DEV='TRUE'
 
 [tool.pixi.tasks]
 app = "python run.py"
-_clean = "nbdev_clean"
-_export = "nbdev_export && rm meme_games/_modidx.py"
-clean = {depends-on = [{ task = '_clean', environment = "dev"}]}
+_export = "nbdev_clean && nbdev_export"
 export = {depends-on = [{ task = '_export', environment = "dev"}]}
 
 
